cockpit community page updates

--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -58,9 +58,11 @@
 		<div class="support-box-wrap box-content2">
 			<div class="support-box-wrap-header">
 				<h1>Pex Card</h1>
-				<div class="support-box-header-actions">
-					<span class="tag tag-green" ng-if="staff.pexcard.active">Active</span>
-					<span class="tag tag-red" ng-if="!staff.pexcard.active">Inctive</span>
+				<div class="support-box-header-actions-wrap">
+					<div class="support-box-header-actions">
+						<span class="tag tag-green" ng-if="staff.pexcard.active">Active</span>
+						<span class="tag tag-red" ng-if="!staff.pexcard.active">Inctive</span>
+					</div>
 				</div>
 				<div class="divider"></div>
 			</div>
@@ -144,8 +146,10 @@
 		<div class="support-box-wrap box-content2">
 			<div class="support-box-wrap-header">
 				<h1>Location</h1>
-				<div class="support-box-header-actions">
-					<span class="tag tag-red">BETA</span>
+				<div class="support-box-header-actions-wrap">
+					<div class="support-box-header-actions">
+						<span class="tag tag-red">BETA</span>
+					</div>
 				</div>
 				<div class="divider"></div>
 			</div>
