--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -733,8 +733,7 @@ p {
 		position: absolute;
 		z-index: 2;
 		width: 222px;
-		margin-top: 5px;
-		padding-top: 62px;
+		padding-top: 52px;
 	}
 	.support-toggled .snap-drawer-right {
 		margin-right: 0;
@@ -743,6 +742,8 @@ p {
 	.nav-top {
 		background: #22242a;
 		border-bottom: none;
+		padding-top: 5px;
+		height: 3.5em;
 	}
 	.side-menu-wrap {
 		width: 205px;
