cockpit design tweaks

--- a/include/views/default/cockpit2/frontend/drivers/drivers-feedback.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-feedback.phtml
@@ -11,7 +11,7 @@
 
 			<div class="support-box-wrap box-content2">
 				<div class="support-box-wrap-header">
-					<h1 ng-if="!finished" class="title left"><span ng-if="!finished">Helf us help you</span></h1>
+					<h1 ng-if="!finished" class="title left"><span ng-if="!finished">Help us help you</span></h1>
 					<div class="divider"></div>
 				</div>
 
