profile page tweaks

--- a/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
@@ -64,7 +64,11 @@
 	</div>
 
 	<div ng-if="!summary.referral.invites && !loading">
-		<div ng-include="'assets/view/general-profile-referal.html'"></div>
+		<ul class="ul-info box-content2">
+			<li class="li-info">
+				<div ng-include="'assets/view/general-profile-referal.html'"></div>
+			</li>
+		</ul>
 	</div>
 
 </div>
