more faq tweaks

--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -46,6 +46,7 @@
 			</div>
 
 			<div class="no-box-content-color">
+				<br>
 				<p>
 					<b>
 						Sooooo, how does this work?
@@ -58,7 +59,7 @@
 						How do I activate my PEX card?
 					</b>
 					<br>
-					Click <a href="/drivers/docs/pexcard">“Activate PEX Card”</a>. Follow the instructions. Please do this at least 2 hours before your first shift.
+					Click <a href="/drivers/docs/pexcard">Activate PEX Card</a>. Follow the instructions. Please do this at least 2 hours before your first shift.
 					<br><br>
 					<b>
 						How should I prepare for my shift?
@@ -71,7 +72,7 @@
 						Will there be other drivers on shift with me?
 					</b>
 					<br>
-					That depends on order volume in your community. We try to make sure drivers have enough orders to stay busy and make money, without being overwhelmed with too many. You can find out who’s scheduled by clicking “Shifts” to the right. It’s great to be in touch with other drivers on shift to divvy up orders and make sure everyone is happy.
+					That depends on order volume in your community. We try to make sure drivers have enough orders to stay busy and make money, without being overwhelmed with too many. You can find out who’s scheduled by clicking <a href="/drivers/shifts">Shifts</a> in the menu. It’s great to be in touch with other drivers on shift to divvy up orders and make sure everyone is happy.
 					<br><br>
 					<b>
 						Ok, how do I make sure I’m not picking up another driver’s order?
@@ -145,6 +146,7 @@
 			</div>
 
 			<div class="no-box-content-color">
+				<br>
 				<p>
 					<b>
 						How can I get tipped more on cash orders?
@@ -204,6 +206,7 @@
 			</div>
 
 			<div class="no-box-content-color">
+				<br>
 				<p>
 					<b>
 						How do I get paid?
@@ -231,6 +234,7 @@
 			</div>
 
 			<div class="no-box-content-color">
+				<br>
 				<p>
 					<b>
 						What are Flex vs Perma-Shifts?
@@ -240,7 +244,7 @@
 					<b>
 						How do Flex Shifts work?
 					</b><br>
-					Your shift preferences are due by Monday at 5pm. Click “Shift Preferences” to the right to submit them. You’ll be texted on Wed at 10 AM Pacific with the results, and you’ll be see them in cockpit.la/drivers/shifts too!<br><br>
+					Your shift preferences are due by Monday at 5pm. Click “Shift Preferences” to the right to submit them. You’ll be texted on Wed at 10 AM Pacific with the results, and you’ll be see them in <a href="/drivers/shifts">Shifts</a> too!<br><br>
 
 					<b>
 						I want to work more shifts. What do I do?
@@ -250,7 +254,7 @@
 					<b>
 						I can’t drive one of my upcoming shifts. What should I do?
 					</b><br>
-					First, contact other drivers from cockpit.la/drivers/shifts to ask if someone can trade with you. Then text us to know about the trade.<br><br>
+					First, contact other drivers from <a href="/drivers/shifts">Shifts</a> to ask if someone can trade with you. Then text us to know about the trade.<br><br>
 
 					If you absolutely can’t find anyone yourself, it's important you give us 2 days notice if you can't make a shift you're scheduled for. We put a lot of faith in drivers to show up for their shifts. Otherwise we might have to shut down the community, which leads to sad customers and other drivers potentially not being able to work! Otherwise you may incur a $10 deduction from your paycheck.<br><br>
 				</p>
@@ -265,6 +269,7 @@
 			</div>
 
 			<div class="no-box-content-color">
+				<br>
 				<p>
 					<b>I’m having difficulty using cockpit.la.</b><br>
 					Try a different browser. On iOS devices, use Safari. On Android, use Chrome (not Firefox). If you’re still having issues, please text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email the specifics and a screenshot of the issue to <a href="mailto:drivers@crunchbutton.com">drivers@crunchbutton.com</a>.
