--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -121,7 +121,7 @@
 						<br><br>
 						By entering your payment information, you agree to the <a href="https://stripe.com/connect/account-terms" target="_system">Stripe Connected Account Agreement</a> which allows us to send money directly to your bank account.
 					</span>
-					
+
 					<br/><br/>
 					<button class="button green" ng-click="save_basic_info();">Save</button>
 				</li>
@@ -158,7 +158,8 @@
 					</div>
 				</li>
 				<li class="li-input" ng-show="!isTokenizing">
-					<button class="button green" ng-click="tokenize();">Save Bank Information</button> <span class="orange link" ng-show="isBeta" ng-click="bankInfoTest()">Test account</span>
+					<button class="button green" ng-click="createBankAccount();">Save Bank Information</button>
+					<span class="orange link" ng-show="isBeta" ng-click="bankInfoTest()">Test account</span>
 				</li>
 				<li class="li-input" ng-show="isTokenizing">
 					<span><i class="fa fa-circle-o-notch fa-spin"></i> Processing</span>
