--- a/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
@@ -4,7 +4,7 @@
 			<th>Name</th>
 			<th ng-if="!community">Info</th>
 			<th class="tb-small tb-center">Active</th>
-			<th class="tb-small tb-center">Working</th>
+			<th class="tb-small tb-center" ng-if="query.working != 'all'">Working</th>
 			<th class="tb-small tb-center">Vehicle</th>
 			<th class="tb-small tb-center">Pex</th>
 			<th class="tb-small"> </th>
@@ -29,7 +29,7 @@
 				<span class="tag tag-green" ng-if="s.active">Active</span>
 				<span class="tag tag-red" ng-if="!s.active">Inactive</span>
 			</td>
-			<td nowrap class="tb-center tb-v-center">
+			<td nowrap class="tb-center tb-v-center" ng-if="query.working != 'all'">
 				<span class="tag tag-purple" ng-if="s.working_today && !s.working">Today</span>
 				<span class="tag tag-orange" ng-if="s.working">Now</span>
 				<span class="tag tag-lightgrey" ng-if="!s.working_today && !s.working">No</span>
