--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payments.phtml
@@ -17,7 +17,7 @@
 				</td>
 				<th>Status</th>
 				<td>
-					<select ng-model="query.status" ng-options="opt.type as opt.label for opt in balanced_statuses" class="cart-customize-select"></select>
+					<select ng-model="query.status" ng-options="opt.type as opt.label for opt in payment_statuses" class="cart-customize-select"></select>
 				</td>
 			</tr>
 		</table>
@@ -34,7 +34,7 @@
 					<th>Driver</th>
 					<th>Type</th>
 					<th>Amount</th>
-					<th>Balanced Status</th>
+					<th>Payment Status</th>
 					<th>Date</th>
 				</tr>
 
@@ -54,11 +54,10 @@
 						<span ng-if="payment.balanced_failure_reason">
 							<i title="{{payment.balanced_failure_reason}}" class="fa fa-warning"></i>&nbsp;
 						</span>
-
 						{{payment.balanced_status}}
 						<i ng-if="!payment.balanced_status">new</i>
 						&nbsp;&nbsp;
-						<span title="Check balanced status" class="link no-underline" ng-if="payment.balanced_status != 'succeeded'" ng-click="balanced_status( payment.id_payment );"> <i class="fa fa-refresh" ng-class="{'fa-spin': balancedRefresh == payment.id_payment}"></i> </span>
+						<span title="Check payment status" class="link no-underline" ng-if="payment.balanced_status != 'succeeded'" ng-click="payment_status payment.id_payment );"> <i class="fa fa-refresh" ng-class="{'fa-spin': balancedRefresh == payment.id_payment}"></i> </span>
 					</td>
 					<td>{{payment.date}}</td>
 				</tr>
@@ -76,7 +75,7 @@
 			</tbody>
 		</table>
 		<div class="divider"></div>
-		
+
 	</div>
 
 
